--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
+# Flask Web Framework
 Flask==3.0.0
-google-generativeai==0.3.2
+Werkzeug==3.0.1
+
+# HTTP Requests for SkyQ AI API
+requests==2.31.0
+
+# PDF Processing
 PyPDF2==3.0.1
+
+# Word Document Processing
 python-docx==1.1.0
+
+# Excel File Handling
 pandas==2.1.4
 openpyxl==3.1.2
-Werkzeug==3.0.1
+
+# Additional Dependencies
+python-dateutil==2.8.2
+pytz==2023.3
