--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,11 @@
-# Flask Web Framework
 Flask==3.0.0
 Werkzeug==3.0.1
-
-# HTTP Requests for SkyQ AI API
 requests==2.31.0
-
-# PDF Processing
+google-generativeai==0.8.3
 PyPDF2==3.0.1
-
-# Word Document Processing
 python-docx==1.1.0
-
-# Excel File Handling
 pandas==2.1.4
 openpyxl==3.1.2
-
-# Additional Dependencies
 python-dateutil==2.8.2
 pytz==2023.3
+python-dotenv==1.0.0
