--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,15 @@ requests==2.31.0
 
 # AI Models
 google-generativeai==0.8.3
-openai==1.6.0
+openai>=1.50.0
 
 # PDF/Document Processing
 pdfplumber==0.10.3
 python-docx==1.1.0
 PyPDF2==3.0.1
+
+# Database
+psycopg2-binary==2.9.9
 
 # Environment
 python-dotenv==1.0.0
